--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+{% for message in get_flashed_messages() %}
+    <div class="alert">{{ message }}</div>
+{% endfor %}
+
 <head>
     {% block head %}
     <meta charset="utf-8">
